update: ajustando lógica de deletar cliente